# tinybufr

./: .gitignore  Cargo.toml  README.md  tables_to_rs.py
.github/: FUNDING.yml
examples/: dump.rs  dump_json.rs  dump_parquet.rs
src/: descriptor.rs  lib.rs  reader.rs  sections.rs
src/arrow/: mod.rs
src/tables/: mod.rs  table_b.rs  table_d.rs
src/tables/local/: jma.rs  mod.rs
tests/: read_dwd.rs  read_jma.rs
tests/common/: mod.rs
tests/testdata/dwd/: LICENSE  synop_ISGD01_EDZW_2025_08_07_11_10.bufr
tests/testdata/jma/: 201806180758.20230110141530_520.BUFR  LICENSE
