[package]
name = "tinybufr"
version = "0.1.0"
edition = "2024"

[dependencies]
bitstream-io = "4.2.0"
byteorder = "1.5.0"
hashbrown = "0.15.2"
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = "1.0.140"
smallvec = "1.14.0"
thiserror = "2.0.12"

[dev-dependencies]
clap = { version = "4.5.32", features = ["derive"] }
indexmap = { version = "2.8.0", features = ["serde"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip", "preserve_order"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
