[package]
name = "tinybufr"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "55.1.0", optional = true }
bitstream-io = "4.2.0"
byteorder = "1.5.0"
hashbrown = "0.15.2"
indexmap = { version = "2.8.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = "1.0.140"
smallvec = "1.14.0"
thiserror = "2.0.12"

[dev-dependencies]
arrow = "55.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
indexmap = { version = "2.8.0", features = ["serde"] }
parquet = "55.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip", "preserve_order"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
arrow = ["dep:arrow", "dep:indexmap"]

[[example]]
name = "dump_parquet"
required-features = ["arrow"]
