[package]
name = "tinybufr"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A decoder for BUFR meteorological observation data format"
repository = "https://github.com/MIERUNE/tinybufr"
exclude = ["BUFR4", ".github", ".gitignore", ".git", "target"]

[dependencies]
arrow = { version = "56.0.0", optional = true }
bitstream-io = "4.5.0"
byteorder = "1.5.0"
hashbrown = "0.15.5"
indexmap = { version = "2.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = "1.0.142"
smallvec = "1.14.0"
thiserror = "2.0.12"

[dev-dependencies]
arrow = "56.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
indexmap = { version = "2.8.0", features = ["serde"] }
parquet = "56.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip", "preserve_order"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
jma = []

[[test]]
name = "read_jma"
required-features = ["jma"]
